--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -24,14 +24,18 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 #* '''2017,''' {{w|Jennifer S. Holland}}, ''For These Monkeys, It’s a Fight for Survival.'', National Geographic (March 2017)[http://www.nationalgeographic.com/magazine/2017/03/macaques-monkeys-indonesia-endangered-pet-trade/]
 #*: Cartoonish, wide-eyed infants '''cling''' to their mothers or play together low to the ground.
 #* {{quote-book|1823|Felicia Dorothea Browne Hemans|The Vespers of Palermo|https://www.worldcat.org/title/vespers-of-palermo-a-tragedy-in-5-acts/oclc/722355055||And what hath life for thee / That thou shouldst '''cling''' to it thus?|section=Act the First}}
-# To adhere to an object, without being affixed, in such a way as to follow its contours. Used especially of fabrics and films.
-# {{lb|en|transitive}} To cause to adhere to, especially by twining round or embracing.
+# To [[adhere]] to an object, without being [[affix]]ed, in such a way as to follow its [[contour]]s. Used especially of [[fabric]]s and [[film]]s.
+# {{lb|en|transitive}} To cause to adhere to, especially by [[twining]] round or [[embracing]].
 #* {{rfdate||and other bibliographic particulars, eg, title of work, page, url}} {{w|Jonathan Swift}}
 #*: I '''clung''' legs as close to his side as I could.
-# {{lb|en|transitive}} To cause to dry up or wither.
+# {{lb|en|transitive}} To cause to [[dry up]] or [[wither]].
 #* c. '''1606''', {{w|William Shakespeare}}, “The Tragedie of Macbeth”, Act V, scene v
 #*: If thou speak'st false, / Upon the next tree shalt thou hang alive, / Till famine '''cling''' thee.
 # {{lb|en|figurative|with preposition to}} to [[be fond of]], to [[feel]] strongly about
+
+=====Synonyms=====
+* {{sense|hold tightly}} {{l|en|clinch}}, {{l|en|grip}}; see also [[Thesaurus:grasp]]
+* {{sense|adhere}} {{l|en|cleave}}, {{l|en|stick}}; see also [[Thesaurus:adhere]]
 
 =====Derived terms=====
 * {{l|en|clingy}}
