--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -227,6 +227,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Malay: {{t|ms|indah}}
 * Maori: {{t|mi|paruhi }}
 * Portuguese: {{t+|pt|limpo}}
+* Slovak: {{t|sk|pekný}}, {{t|sk|krásny}}
 * Spanish: {{t+|es|bueno}}, {{t+|es|despejado}}, {{t+|es|alegre}}
 * Swedish: {{t+|sv|fint|n}}, {{t+|sv|vackert|n}}
 * Tamil: {{t+|ta|அழகிய}}
@@ -241,6 +242,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Norwegian:
 *: Bokmål: {{t+|nb|nydelig}}, {{t|nb|enestående}}
 *: Nynorsk: {{t|nn|nydeleg}}, {{t|nn|eneståande}}
+* Slovak: {{t|sk|krásny}}
 {{trans-bottom}}
 
 {{trans-top|as a pro-sentence}}
