--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -3,7 +3,7 @@
 [[File:CH Landwasser 2.jpg|thumb|A bridge (sense 1)]]
 
 ===Alternative forms===
-* {{l|en|bridg}} {{qualifier|obsolete}}
+* {{alter|en|bridg||obsolete}}
 
 ===Pronunciation===
 {{wikipedia|dab=Bridge (disambiguation)|Bridge}}
