--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -79,7 +79,7 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 {{ja-readings
 |goon=そう
 |kanon=そう
-|kanyoon=さつ
+|kanyoon=さっ
 |kun=はや-い, はや-まる, はや-める, さ-
 }}
 
