--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -11,11 +11,14 @@
 ----
 
 ==Chinese==
+
 ===Glyph origin===
 {{Han compound|日|升|ls=psc|c1=s|c2=p|t1=sun}}.
+
 ===Definitions===
 {{zh-see|升|v}}
-===Usage note===
+
+===Usage notes===
 This character may be used in personal names.
 
 ----
