--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -31,6 +31,8 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 # {{lb|en|transitive}} To cause to [[dry up]] or [[wither]].
 #* c. '''1606''', {{w|William Shakespeare}}, “The Tragedie of Macbeth”, Act V, scene v
 #*: If thou speak'st false, / Upon the next tree shalt thou hang alive, / Till famine '''cling''' thee.
+# {{lb|en|intransitive}} To [[dry up]] or [[wither]].
+#: ''Wood '''clings'''.''
 # {{lb|en|figurative|with preposition to}} to [[be fond of]], to [[feel]] strongly about
 
 =====Synonyms=====
