--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -359,6 +359,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 *: Cantonese: {{t|yue|捉|tr=zuk1|sc=Hani}}
 *: Mandarin: {{t+|cmn|捉|tr=zhuō}}; {{t+|cmn|捕獲|sc=Hani}}, {{t+|cmn|捕获|tr=bǔhuò|sc=Hani}}, {{t+|cmn|捕|tr=bǔ|sc=Hani}}
 *: Min Nan: {{t+|nan|掠|tr=lia̍h|sc=Hani}}
+* Czech: {{t+|cs|chytat|impf}}, {{t+|cs|chytit|pf}}
 * Finnish: {{t+|fi|napata}}, {{t|fi|saada kiinni}}
 * French: {{t+|fr|attraper}}, {{t+|fr|prendre}}
 * Friulian: {{t|fur|cjapâ}}
