--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -40,8 +40,8 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 |j_note=xing1 - literary; xi1 - vernacular (limited, e.g. {{l|zh|星宿}})
 |mb=sáing
 |md=sĭng
-|mn=xm,qz,lk,sx,tp,km,mg,hc:chhiⁿ/zz,yl,tn,kh,tc,pn:chheⁿ/seng
-|mn_note=chhiⁿ/chheⁿ - vernacular; seng - literary
+|mn=xm,qz,lk,sx,tp,km,mg,hc:chhiⁿ/zz,yl,tn,kh,tc,pn:chheⁿ/san/seng
+|mn_note=chhiⁿ/chheⁿ - vernacular; san - vernacular (limited, e.g. {{l|zh|零星}}); seng - literary
 |mn-t=cên1
 |w=1xin
 |x=sin1
