--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -60,7 +60,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 *: Ancient Greek: {{t|grc|γραμματεύς|m}}
 * Hebrew: {{t|he|מַזְכִּיר|m|tr=mazkir}}, {{t|he|מַזְכִּירָה|f|tr=mazkira}}
 * Hindi: {{t+|hi|सचिव|m}}
-* Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
+* Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}, {{t+|hu|adminisztrátor}}
 * Icelandic: {{t|is|ritari|m}}
 * Ido: {{t+|io|sekretario}}
 * Indonesian: {{t+|id|sekretaris}}
