--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -81,6 +81,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * German: {{t+|de|Mantel|m}}
 * Greek: {{t+|el|πανωφόρι|n|sc=Grek}}, {{t+|el|παλτό|n|sc=Grek}}
 * Hebrew: {{t+|he|מְעִיל|tr=m'íl|sc=Hebr}}
+* Hindi: {{t+|hi|कोट|m}}
 * Hungarian: {{t+|hu|kabát}}
 * Icelandic: {{t+|is|jakki|m}}, {{t+|is|frakki|m}}
 * Indonesian: {{t+|id|mantel}}
@@ -95,8 +96,8 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Latin: {{t|la|pallium|n}}, {{t|la|laena|f}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
-{{trans-mid}}
 * Luhya: {{t|luy|kumuchosi}}
+{{trans-mid}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
 * Malay: {{t|ms|kot}}
 * Maori: {{t|mi|koti}}
@@ -124,9 +125,11 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Thai: {{t|th|เสื้อนอก}}, {{t|th|เสื้อโค้ท}}
 * Tibetan: {{t|bo|ཀོར}}, {{t|bo|ཕྱུ་པ}}
 * Turkish: {{t+|tr|palto}}
+* Turkmen: {{t|tk|palto}}
 * Ukrainian: {{t+|uk|пальто́|n|sc=Cyrl}}, {{t|uk|піджа́к|sc=Cyrl}} {{qualifier|jacket}}
+* Urdu: {{t|ur|کوٹ|m|tr=koṭ}}
 * Uyghur: {{t|ug|پەلتو}}
-* Uzbek: {{t|uz|palʼto}}
+* Uzbek: {{t|uz|palʼto}}, {{t+|uz|palto}}
 * Vietnamese: {{t|vi|áo bành tô}}, {{t|vi|áo khoác}}
 * Volapük: {{t-needed|vo}}
 * Welsh: {{t|cy|côt|f}}
