--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -64,6 +64,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Armenian: {{t+|hy|վերարկու|sc=Armn}}, {{t+|hy|պալտո}}
 * Azerbaijani: {{t+|az|palto}}
 * Belarusian: {{t|be|паліто́|n|sc=Cyrl}}, {{t|be|пальто́|n|sc=Cyrl}}, {{t|be|пінжа́к|m|sc=Cyrl}} {{qualifier|jacket}}
+* Bengali: {{t|bn|কোট}}
 * Bulgarian: {{t+|bg|сако|n|sc=Cyrl}}, {{t+|bg|жакет|m|sc=Cyrl}}, {{t+|bg|пардесю́|n}}, {{t+|bg|палто́|n}}
 * Burmese: {{t+|my|အင်္ကျီ}}, {{t+|my|လောင်းကုတ်အင်္ကျီ}}, {{t+|my|ကုတ်}}
 * Catalan: {{t+|ca|abric|m}}, {{t+|ca|casaca|f}}
@@ -96,8 +97,8 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Latin: {{t|la|pallium|n}}, {{t|la|laena|f}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
-* Luhya: {{t|luy|kumuchosi}}
 {{trans-mid}}
+* Luhya: {{t|luy|kumuchosi}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
 * Malay: {{t|ms|kot}}
 * Maori: {{t|mi|koti}}
