--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -15,7 +15,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 {{wikipedia}}
 {{en-noun|~}}
 
-# The loud rumbling or cracking [[sound]] caused by expansion of rapidly heated air around a [[lightning]] bolt.
+# The loud rumbling, cracking, or crashing [[sound]] caused by expansion of rapidly heated air around a [[lightning]] bolt.
 #: '''''Thunder''' ''is preceded by lightning.''
 # A sound resembling thunder; especially, one produced by a [[jet]] [[airplane]] in flight.
 # A deep, [[rumble|rumbling]] noise.
