--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -8,7 +8,7 @@
 {{en-noun}}
 
 # {{lb|en|anatomy}} One of the great [[tendon]]s situated in each side of the [[ham]], or space back of the knee, and connected with the muscles of the back of the thigh.
-# {{lb|en|informal}} The [[biceps femoris]] [[muscle]].
+# {{lb|en|informal}} The [[biceps femoris]], [[semimembranosus]], and [[semitendinosus]] [[muscles]].
 #: {{syn|en|hams}}
 #* '''2010''', Adam Garett, "Fried Hams", ''Reps!'' '''17''':23
 #*: Developing muscle around both sides of a joint (think biceps and triceps, abs and low back, quads and '''hamstrings''') should be one of your primary training considerations because strength on each side leads to lower injury rates.
