--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -156,7 +156,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Kalmyk: {{t|xal|гесн}}
 * Kashubian: {{t-needed|csb}}
 * Kazakh: {{t+|kk|асқазан|sc=Cyrl}}
-* Khmer: {{t+|km|ក្រពះ|tr=krɑpeah|sc=Khmr}}
+* Khmer: {{t+|km|ក្រពះ}}
 * Kimaragang: {{t|kqr|tiyan}}
 * Komi-Permyak: {{t-needed|koi}}
 * Korean: {{t+|ko|위}} ({{t+|ko|胃}})
