--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -161,7 +161,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Komi-Permyak: {{t-needed|koi}}
 * Korean: {{t+|ko|위}} ({{t+|ko|胃}})
 * Kyrgyz: {{t|ky|ашказан}}
-* Lao: {{t+|lo|ກະເພາະ}}
+* Lao: {{t+|lo|ກະເພາະ}}, {{t|lo|ທ້ອງ}}
 * Latgalian: {{t|ltg|pasirds}}
 * Latin: {{t|la|alvus|m}}, {{t|la|venter|m}}, {{t|la|stomachus|m}}
 * Latvian: {{t|lv|kuņģis|m}}
