--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -97,7 +97,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Bashkir: {{t|ba|ашҡаҙан}}
 * Basque: {{t+|eu|urdail}}
 * Bau Bidayuh: {{t|sne|toin}}, {{t|sne|kubuoi}}
-* Belarusian: {{t|be|стра́ўнік|m|sc=Cyrl}}
+* Belarusian: {{t|be|стра́ўнік|m|sc=Cyrl}}, {{t|be|жалу́дак|m}}
 * Bengali: {{t|bn|পাকস্থলী|sc=Beng}}
 * Breton: {{t+|br|stomog|m}}
 * Bulgarian: {{t+|bg|стома́х|m|sc=Cyrl}}
