--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -245,7 +245,7 @@ From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomac
 * Turkish: {{t+|tr|mide}}, {{t+|tr|karın}}, {{t|tr|aşkazan}}
 * Turkmen: {{t|tk|garyn}}, {{t+|tk|aşgazan}}
 * Tuvan: {{t|tyv|ижин}}
-* Ukrainian: {{t+|uk|шлу́нок|m}}
+* Ukrainian: {{t+|uk|шлу́нок|m}}, {{t|uk|желу́док|m}} {{qualifier|rare}}
 * Urdu: {{t|ur|معدہ|f|tr=ma'da}}, {{t|ur|پیٹ|m|tr=peṭ}}
 * Uyghur: {{t+|ug|ئاشقازان}}
 * Uzbek: {{t+|uz|qorin}}, {{t+|uz|oshqozon}}
