--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -73,12 +73,16 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 *: Cyrillic: {{t|az|гәшәнҝ|sc=Cyrl}}
 * Bashkir: {{t|ba|матур}}
 * Basque: {{t-needed|eu}}
+* Belait: {{t|beg|jie batien}}
 * Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}
 * Bengali: {{t|bn|সুন্দর|sc=Beng}}
 * Breton: {{t+|br|brav}}, {{t+|br|kaer}}
+* Brunei Bisaya: {{t|bsb|bagak}}
+* Brunei Malay: {{t|kxd|bisai}}
 * Bulgarian: {{t+|bg|краси́в}}, {{t+|bg|прекра́сен}}
 * Burmese: {{t|my|လှသော|sc=Mymr}}, {{t+|my|လှပ|sc=Mymr}}
 * Catalan: {{t+|ca|bell|m}}, {{t+|ca|bella|f}}, {{t+|ca|formós|m}}, {{t|ca|formósa|f}}, {{t+|ca|bonic|m}}, {{t+|ca|bonica|f}}
+* Central Dusun: {{t|dtp|olumis}}
 * Chamicuro: {{t|ccc|pya'c̈homa}}, {{t|ccc|pewa puti'na}}
 * Chinese:
 *: Cantonese: {{t|yue|靚|sc=Hani}}, {{t|yue|靓|tr=leng3|sc=Hani}}, {{t|yue|好睇|tr=hou2 tai2|sc=Hani}} {{qualifier|object}}, {{t|yue|漂亮|tr=piu3 loeng6|sc=Hani}} {{qualifier|formal}}, {{t|yue|美麗|sc=Hani}}, {{t|yue|美丽|tr=mei5 lai6|sc=Hani}} {{qualifier|formal}}
@@ -127,11 +131,11 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t|ku|ئێسک سووک}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
+{{trans-mid}}
 * Lao: {{t|lo|ງາມ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
 * Latvian: {{t|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
 * Limburgish: {{t|li|sjoen}}
-{{trans-mid}}
 * Lithuanian: {{t+|lt|gražus}}
 * Low German: {{t+|nds|schöön}}, {{t|nds|scheun}}
 * Lü: {{t|khb|ᦇᦱᧄ|sc=Talu}}
@@ -190,6 +194,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Tswana: {{t|tn|-ntle}}
 * Turkish: {{t+|tr|güzel}}
 * Turkmen: {{t|tk|görmegeý}}, {{t|tk|gözel}}, {{t|tk|gelşikli}}
+* Tutong: {{t|ttg|lawa'}}
 * Ukrainian: {{t|uk|вродли́вий}}, {{t+|uk|краси́вий}}, {{t+|uk|га́рний|sc=Cyrl}}
 * Urdu: {{t|ur|خوبصورت|tr=xūbsūrat}}, {{t|ur|سندر|tr=sundar}}
 * Uyghur: {{t|ug|گۈزەل}}
@@ -199,6 +204,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Volapük: {{t+|vo|jönik}}, {{qualifier|augmentative}} {{t+|vo|lejönik}}
 * Walloon: {{t+|wa|bea|m}}, {{t+|wa|bele|f}}
 * Welsh: {{t+|cy|hardd}}, {{t+|cy|prydferth}}
+* West Coast Bajau: {{t|bdr|lawa'}}
 * West Frisian: {{t|fy|moai}}, {{t|fy|kreas}}
 * Westrobothnian: {{t|gmq-bot|skönat}}, {{t|gmq-bot|vakker}}
 * Yiddish: {{t|yi|שיין|sc=Hebr}}
