--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -180,6 +180,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Waray-Waray: {{t|war|ig-tulang}}, {{t|war|gin-tulang}}, {{t|war|i-duso}}, {{t|war|ig-duso}}
 * Welsh: {{t+|cy|gwthio}}
 * West Frisian: {{t|fy|triuwe}}
+* Zealandic: {{t|zea|douwe}}
 {{trans-bottom}}
 
 {{trans-top|to continually attempt to persuade into a particular action}}
