--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -290,6 +290,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * Lithuanian: {{t+|lt|traukti}}
 * Macedonian: {{t|mk|влече|impf}}
 * Malay: {{t|ms|tarik}}
+* Maori: {{t|mi|keu}} {{qualifier|a trigger of a gun, or power tool}}
 * Mongolian: {{t+|mn|татах}}, {{t+|mn|урах}}
 * Norman: {{t|nrf|haler}}
 * Norwegian: {{t+|no|trekke}}, {{t+|no|dra}}
@@ -351,6 +352,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * Finnish: {{t+|fi|vetää}}
 * French: {{t+|fr|retirer}}
 {{trans-mid}}
+* Maori: {{t|mi|kōwhiti }}
 * Norwegian: {{t+|no|trekke}}, {{t|no|trekke tilbake}}
 * Portuguese: {{t+|pt|tirar}}
 {{trans-bottom}}
